--- a/luci-app-npc/po/zh_Hans/npc.po
+++ b/luci-app-npc/po/zh_Hans/npc.po
@@ -33,3 +33,6 @@ msgstr "唯一验证密钥"
 
 msgid "Update NPC"
 msgstr "更新 NPC"
+
+msgid "Update completed. The application will stop. Please manually enable the service again."
+msgstr "更新操作完成后,应用将停止,请手动重新启用服务"
