--- a/luci-app-nps/po/zh_Hans/nps.po
+++ b/luci-app-nps/po/zh_Hans/nps.po
@@ -16,5 +16,11 @@ msgstr "未运行"
 msgid "Update NPS"
 msgstr "更新 NPS"
 
+msgid "Update completed. The application will stop. Please manually enable the service again."
+msgstr "更新操作完成后,应用将停止,请手动重新启用服务"
+
 msgid "Default Config"
 msgstr "默认配置"
+
+msgid "Clicking this button will replace the current configuration with the default configuration file."
+msgstr "点击此按钮将替换当前配置为默认配置文件"
