--- a/luci-app-npc/po/zh_Hans/npc.po
+++ b/luci-app-npc/po/zh_Hans/npc.po
@@ -34,5 +34,5 @@ msgstr "唯一验证密钥"
 msgid "Update NPC"
 msgstr "更新 NPC"
 
-msgid "Update completed. The application will stop. Please manually enable the service again."
-msgstr "更新操作完成后,应用将停止,请手动重新启用服务"
+msgid "Click to update to the latest version"
+msgstr "点击即可更新到最新版本"
