--- a/luci-app-nps/po/zh_Hans/nps.po
+++ b/luci-app-nps/po/zh_Hans/nps.po
@@ -1,7 +1,7 @@
 msgid "NPS Server"
 msgstr "NPS 内网穿透服务端"
 
-msgid "Nps is a fast reverse proxy to help you expose a local server behind a NAT or firewall to the internet."
+msgid "NPS is a fast reverse proxy to help you expose a local server behind a NAT or firewall to the internet."
 msgstr "NPS 是一种快速反向代理,可帮助您将 NAT 或防火墙后的本地服务器公开到 Internet"
 
 msgid "NPS Configuration"
