添加脚本方式安装

--- a/luci-app-npc/po/zh-cn/npc.po
+++ b/luci-app-npc/po/zh-cn/npc.po
@@ -48,3 +48,9 @@ msgstr "更新 NPC"
 
 msgid "Click to update to the latest version"
 msgstr "点击即可更新到最新版本"
+
+msgid "Install NPC"
+msgstr "安装 NPC"
+
+msgid "Click to install or update NPC via script"
+msgstr "点击通过脚本安装或更新 NPC"
